# pingy

./: .editorconfig  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  publish.yml  release.yml
scripts/: release-version.sh
src/: draw.rs  main.rs  network.rs  terminal.rs
src/ui/: graph.rs  mod.rs  point.rs  table.rs  utils.rs
