[package]
name = "pingy"
version = "0.1.4"
edition = "2021"
description = "Pingy: A fast, concurrent Rust-based ping tool with real-time updates & visual charts!"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
license = "MIT"
repository = "https://github.com/trinhminhtriet/pingy"
homepage = "https://trinhminhtriet.com/"
documentation = "https://github.com/trinhminhtriet/pingy"
keywords = ["ping", "network", "tui", "cli"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
ratatui = "0.29.0"
tokio = { version = "1.44.1", features = ["full"] }
pinger="2.0.0"
anyhow="1.0.97"
